# Abject-Language

./: .gitignore  CMakeLists.txt  README.md
build-src-Desktop-Debug/: Abject.cbp  AbjectC  AbjectLanguage.cbp  CMakeCache.txt  Makefile  Onirism  cmake_install.cmake
build-src-Desktop-Default/: .ninja_deps  .ninja_log  Abject.cbp  AbjectC  CMakeCache.txt  Lethargy  Onirism  build.ninja  cmake_install.cmake  rules.ninja
misc/examples/: Simple.abj
src/: CMakeLists.txt  lethargy.cc  main.cpp  onirism.cc
src/abstract/: abstract.cc  abstract.h
src/common/: cref.h  indexable.h  memory.cc  memory.h  murmur.cc  murmur.h  unique.h
src/compiler/parser/: ast.cpp  ast.h  diagnostic.cc  diagnostic.h  parse.cpp  parse.h
src/execution/: backend.cc  backend.h
src/execution/lethargy/: executor.cc  executor.h  interpreter.cc  interpreter.h  memory.cc  memory.h  runtime.cc  runtime.h
src/execution/llvm/: backend.cc  backend.h
src/execution/onirism/: backend.cc  backend.h
src/metamodel/: function.cc  function.h  metamodel.cc  metamodel.h  modular.cc  modular.h  module.cc  module.h  types.cc  types.h
src/metamodel/cfg/: cfg.cc  cfg.h  code.cc  code.h  identifier.cc  identifier.h  instructions.h  statements.cc  statements.h
src/metamodel/loader/: loader.cc  loader.h
src/metamodel/loader/filesystem/: filesystem.cc  filesystem.h  filesystem.h.autosave
src/tools/: countable.h  cref.h
